refactor: code refactor.

--- a/apps/showcase-app/src/app/components/sidenav/sidenav.component.html
+++ b/apps/showcase-app/src/app/components/sidenav/sidenav.component.html
@@ -5,7 +5,7 @@
       class="sidenav__link"
       [routerLink]="link.routerLink"
       routerLinkActive="sidenav__active-link"
-      [routerLinkActiveOptions]="{ exact: false }"
+      [routerLinkActiveOptions]="{ exact: true }"
       (click)="dismissBottomSheet()"
       >{{ link.linkLabel }}
     </mat-list-option>
