--- a/libs/music-player-lib/src/lib/components/menu/menu.component.scss
+++ b/libs/music-player-lib/src/lib/components/menu/menu.component.scss
@@ -1,9 +1,6 @@
 .menu-item-home {
   @apply hover:bg-purple-500;
 }
-.menu-item-jamendo {
-  @apply hover:bg-pink-500;
-}
-.menu-item-local {
-  @apply hover:bg-cyan-500;
+.menu-item-settings {
+  @apply hover:bg-green-500;
 }
