--- a/libs/music-player-lib/src/lib/features/jamendo/jamendo.component.html
+++ b/libs/music-player-lib/src/lib/features/jamendo/jamendo.component.html
@@ -1,4 +1,7 @@
-<music-player-base-component [inputPlatform$]="selectorPlatform$">
+<music-player-base-component
+  [inputPlatform$]="selectorPlatform$"
+  [inputVolume$]="selectorVolume$"
+>
   <p header-label class="text-sm lg:text-lg">Jamendo music player</p>
 
   <section body-content class="h-full">
