--- a/libs/music-player-lib/src/lib/components/menu/menu.component.html
+++ b/libs/music-player-lib/src/lib/components/menu/menu.component.html
@@ -3,10 +3,28 @@
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
-    <mat-menu #menu="matMenu">
+    <mat-menu #menu="matMenu" xPosition="before">
       <button mat-menu-item routerLink="../" class="menu-item-home">
-        Home
+        <mat-icon class="text-dark dark:text-light">home</mat-icon>
+        <span>Home</span>
       </button>
+      <button
+        mat-menu-item
+        [matMenuTriggerFor]="settings"
+        class="menu-item-settings"
+      >
+        <mat-icon class="text-dark dark:text-light">settings</mat-icon>
+        <span>Settings</span>
+      </button>
+    </mat-menu>
+    <mat-menu #settings="matMenu">
+      <div class="flex flex-col items-center" mat-menu-item>
+        <span class="text-sm">In Progress</span>
+        <!-- <div mat-menu-item>
+          <span>Volume</span>
+          <mat-slider [value]="inputVolume$ | async"></mat-slider>
+        </div> -->
+      </div>
     </mat-menu>
   </div>
 </div>
