config: Add elf state management and code refactor

--- a/libs/music-player-lib/src/lib/components/home/home.component.html
+++ b/libs/music-player-lib/src/lib/components/home/home.component.html
@@ -16,6 +16,15 @@
     </div>
   </body>
   <footer class="flex items-center justify-center text-xs">
-    Made using update later!!
+    Made using
+    <span
+      ><a
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://howlerjs.com/"
+        class="text-light dark:text-dark underline ml-2"
+        >Howlerjs</a
+      ></span
+    >
   </footer>
 </main>
