--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -72,3 +72,17 @@ html,
 .mat-slider-min-value:not(.mat-slider-thumb-label-showing) .mat-slider-thumb {
   @apply border border-light transition-colors duration-500;
 }
+
+// Style scrollbar
+::-webkit-scrollbar {
+  width: 6px;
+  @apply bg-light;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-accent;
+  -webkit-border-radius: 2rem;
+}
+::-webkit-scrollbar-corner {
+  border-radius: 50%;
+}
