E-com:Music-player: Major code reorganisation, folder and file restructure.

--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -44,6 +44,7 @@ html,
 .mat-list-option,
 .mat-button-wrapper,
 .mat-bottom-sheet-container,
+.mat-card,
 .mat-menu-item {
   font-family: 'Fira code', monospace, 'Helvetica Neue', sans-serif;
 }
