intro: Added base content

--- a/apps/showcase-app/src/app/components/intro-page/intro-page.component.html
+++ b/apps/showcase-app/src/app/components/intro-page/intro-page.component.html
@@ -1,1 +1,12 @@
-<p>intro-page works!</p>
+<main>
+  Showcase
+
+  <p>
+    Showcase is a project where micro-apps demo are built using the Angular
+    framework.
+  </p>
+  <p>
+    The project is a continuous work in progress. Micro-apps will gradually be
+    added while continuously learning the Angular technology.
+  </p>
+</main>
