--- a/apps/showcase-app/src/app/components/intro-page/intro-page.component.html
+++ b/apps/showcase-app/src/app/components/intro-page/intro-page.component.html
@@ -1,12 +1,8 @@
-<main>
-  Showcase
-
-  <p>
-    Showcase is a project where micro-apps demo are built using the Angular
-    framework.
-  </p>
-  <p>
-    The project is a continuous work in progress. Micro-apps will gradually be
-    added while continuously learning the Angular technology.
-  </p>
+<main #main class="h-full relative">
+  <intro-content></intro-content>
+  <intro-snowflake-canvas
+    [inputCameraPositionX]="cameraPositionX"
+    [inputCameraPositionY]="cameraPositionY"
+    (outputMoveCamera)="moveCamera($event)"
+  ></intro-snowflake-canvas>
 </main>
