--- a/apps/showcase-app/src/app/components/intro-page/components/intro-content/intro-content.component.html
+++ b/apps/showcase-app/src/app/components/intro-page/components/intro-content/intro-content.component.html
@@ -1,12 +1,12 @@
 <body
   class="h-full w-full flex flex-col justify-between xl:w-1/2 absolute top-0 px-4 pb-16 pt-8 text-light dark:text-dark backdrop-blur-sm dark:bg-light bg-[#022b3a] bg-opacity-20 dark:bg-opacity-20 transition-colors duration-1000 z-50"
 >
-  <div class="first flex gap-4 items-center">
+  <div #intro class="flex gap-4 items-center">
     <showcase-app-logo></showcase-app-logo>
     <h1 class="text-5xl">Expo</h1>
   </div>
 
-  <div class="second text-2xl xl:text-4xl">
+  <div #greet class="text-2xl xl:text-4xl">
     <div>
       <span class="greetings inline-block text-accent flicker">{{
         greetings
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <div class="third leading-relaxed text-sm xl:text-lg xl:leading-loose">
+  <div #description class="leading-relaxed text-sm xl:text-lg xl:leading-loose">
     <p>
       Expo aims at showcasing applications and features developed using tools
       such as the
@@ -43,7 +43,7 @@
       as the framework and other third party libraries.
     </p>
   </div>
-  <div class="fourth flex flex-col gap-2 xl:gap-4">
+  <div #action class="flex flex-col gap-2 xl:gap-4">
     <p class="text-sm pb-2 xl:text-base">Explore available applications</p>
     <div class="flex flex-col xl:flex-row gap-4">
       <button
@@ -69,7 +69,8 @@
 </body>
 
 <footer
-  class="intro-footer absolute z-50 w-full px-4 h-8 bottom-0 flex items-center justify-center xl:justify-start text-xs text-light dark:text-dark"
+  #footer
+  class="absolute z-50 w-full px-4 h-8 bottom-0 flex items-center justify-center xl:justify-start text-xs text-light dark:text-dark"
 >
   <p>
     Built using
