--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -80,6 +80,22 @@ html,
   }
 }
 
+// Todo app
+.checkbox {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: box-shadow 0.3s;
+  background: rgb(241, 241, 241);
+  cursor: pointer;
+  border: 0;
+  appearance: none;
+  -webkit-appearance: none;
+}
+.checkbox:checked {
+  box-shadow: inset 0 0 0 20px #61a6fa;
+}
+
 // Style scrollbar
 ::-webkit-scrollbar {
   width: 6px;
