--- a/libs/e-commerce-lib/src/lib/client/containers/landing-container/landing-container.component.html
+++ b/libs/e-commerce-lib/src/lib/client/containers/landing-container/landing-container.component.html
@@ -1,7 +1,7 @@
 <main
   class="h-full grid grid-rows-[8%_1fr_5%] bg-gradient-to-br from-light to-dark dark:from-dark dark:to-light"
 >
-  <header class="shadow-md flex items-center justify-between px-8">
+  <header class="shadow-md flex items-center justify-between px-4 xl:px-8">
     <span class="text-xl"> Esklep </span>
     <button mat-icon-button>
       <mat-icon [matBadge]="10" [matBadgeHidden]="true">
@@ -39,7 +39,7 @@
     </shared-ui-loader>
   </body>
   <footer class="flex items-center justify-center text-sm text-black">
-    Made using xTech
+    Built using xTech
   </footer>
 </main>
 
