--- a/libs/todo-lib/src/lib/ui/todo-user-info/todo-user-info.component.html
+++ b/libs/todo-lib/src/lib/ui/todo-user-info/todo-user-info.component.html
@@ -1,7 +1,13 @@
-<ng-container *ngIf="inputUser$ | async as user">
-  <div class="flex flex-col">
-    <img [src]="user.avatarImage" alt="User avatar" class="w-20" />
-    <p>Good {{ inputPartOfDayName$ | async }}</p>
-    <p>{{ user.name }}</p>
-  </div>
+<ng-container *ngIf="inputUser">
+  <section class="flex justify-end items-center relative mb-4 h-16 xl:h-20">
+    <div
+      class="absolute text-2xl grid place-items-center bg-[#022b3a] shadow-sm rounded-full left-0 top-0 w-16 h-16 xl:w-20 xl:h-20 xl:text-3xl"
+    >
+      {{ inputUser.name | uppercase | charSlice: 2 }}
+    </div>
+    <div class="text-right">
+      <p class="text-lg">Good {{ inputPartOfDayName }}</p>
+      <p class="text-2xl">{{ inputUser.name }}</p>
+    </div>
+  </section>
 </ng-container>
