--- a/libs/todo-lib/src/lib/ui/todo-view/todo-view.component.scss
+++ b/libs/todo-lib/src/lib/ui/todo-view/todo-view.component.scss
@@ -1,3 +1,15 @@
-// div {
-//     textdeco
-// }
+// Todo app
+.checkbox {
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  transition: box-shadow 0.3s;
+  background: rgb(241, 241, 241);
+  cursor: pointer;
+  border: 0;
+  appearance: none;
+  -webkit-appearance: none;
+}
+.checkbox:checked {
+  box-shadow: inset 0 0 0 20px #61a6fa;
+}
