e-commerce: Refactor library structure

--- a/libs/e-commerce-lib/src/lib/client/features/landing/landing.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/landing/landing.component.html
@@ -1,4 +1,4 @@
-<main
+<!-- <main
   class="h-full grid grid-rows-[8%_1fr_5%] bg-gradient-to-br from-light to-dark dark:from-dark dark:to-light"
 >
   <header class="shadow-md flex items-center justify-between px-4 xl:px-8">
@@ -45,4 +45,5 @@
 
 <ng-template #emptyCollection>
   <div class="h-full grid place-items-center">No collection found.</div>
-</ng-template>
+</ng-template> -->
+<div>Hello</div>
