ecommerce: Refactor code

--- a/libs/e-commerce-lib/src/lib/client/features/landing/landing.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/landing/landing.component.html
@@ -1,6 +1,4 @@
-<!-- <main
-  class="h-full grid grid-rows-[8%_1fr_5%] bg-gradient-to-br from-light to-dark dark:from-dark dark:to-light"
->
+<main class="h-full grid grid-rows-[8%_1fr_5%] bg-gray-100 text-dark">
   <header class="shadow-md flex items-center justify-between px-4 xl:px-8">
     <span class="text-xl"> Esklep </span>
     <button mat-icon-button>
@@ -45,5 +43,4 @@
 
 <ng-template #emptyCollection>
   <div class="h-full grid place-items-center">No collection found.</div>
-</ng-template> -->
-<div>Hello</div>
+</ng-template>
