--- a/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<main class="h-full grid grid-rows-[8%_1fr_5%]">
+<!-- <main class="h-full grid grid-rows-[8%_1fr_5%]">
   <header>Product detail page</header>
   <body>
     <shared-ui-loader [inputIsLoading$]="isLoading$">
@@ -38,4 +38,4 @@
     </shared-ui-loader>
   </body>
   <footer>Footer of detail page</footer>
-</main>
+</main> -->
