--- a/libs/e-commerce-lib/src/lib/client/features/products/products.component.html
+++ b/libs/e-commerce-lib/src/lib/client/features/products/products.component.html
@@ -1,4 +1,4 @@
-<main class="h-full grid grid-rows-[8%_1fr_5%]">
+<!-- <main class="h-full grid grid-rows-[8%_1fr_5%]">
   <header>Header</header>
   <body>
     <shared-ui-loader [inputIsLoading$]="isLoading$">
@@ -49,4 +49,4 @@
     </shared-ui-loader>
   </body>
   <footer>footer</footer>
-</main>
+</main> -->
