--- a/libs/e-commerce-lib/src/lib/client/ui/products-category/products-category.component.html
+++ b/libs/e-commerce-lib/src/lib/client/ui/products-category/products-category.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="inputProducts$ | async as products">
+<!-- <ng-container *ngIf="inputProducts$ | async as products">
   <div>
     <span class="text-xl"> {{ inputCategoryName }} </span>
     <div class="my-4 xl:grid xl:grid-cols-4 xl:gap-4">
@@ -42,4 +42,6 @@
       </div>
     </div>
   </div>
-</ng-container>
+</ng-container> -->
+
+<div>Product Category</div>
