--- a/libs/e-commerce-lib/src/lib/admin/ui/admin-layout/admin-layout.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/ui/admin-layout/admin-layout.component.html
@@ -1,7 +1,29 @@
-<main class="h-full grid grid-rows-[8%_1fr_8%]">
-  <header class="bg-red-200">e-sklep admin</header>
-  <body class="bg-green-200">
+<main class="h-full grid grid-rows-[8%_1fr_8%] bg-e-com-primary text-light">
+  <header class="bg-e-com-secondary flex items-center justify-between px-4">
+    <div class="flex items-center gap-4">
+      <img src="assets/e-commerce/logo.svg" width="30" alt="E-commerce logo" />
+      <span class="text-xl xl:text-2xl"> Shopo </span>
+    </div>
+
+    <div class="text-sm xl:text-base">
+      <span> Admin portal </span>
+      <ng-container *ngIf="isAdminAuthenticated$ | async">
+        <span>
+          <button mat-icon-button (click)="signOut()">
+            <mat-icon>logout</mat-icon>
+          </button>
+        </span>
+      </ng-container>
+    </div>
+  </header>
+  <body>
     <ng-content></ng-content>
   </body>
-  <footer class="bg-blue-200">Footer</footer>
+  <footer class="flex items-center justify-center">
+    <a
+      class="underline hover:text-e-com-accent transition-colors duration-500"
+      routerLink="../"
+      >View online shop</a
+    >
+  </footer>
 </main>
