--- a/libs/e-commerce-lib/src/lib/admin/features/dashboard/dashboard-home.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/features/dashboard/dashboard-home.component.html
@@ -1,1 +1,142 @@
-<admin-layout>Welcome to dashboard</admin-layout>
+<ng-container *ngIf="isAdminNew$ | async; else showDashboard">
+  <ui-welcome (outputSkipWelcomeIntro)="skipWelcomeIntro()"></ui-welcome>
+</ng-container>
+
+<ng-template #showDashboard>
+  <ui-dashboard-layout>
+    <section inventory>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+      <div>2</div>
+    </section>
+    <section orders>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+      <div>589585</div>
+    </section>
+  </ui-dashboard-layout>
+</ng-template>
