--- a/libs/e-commerce-lib/src/lib/admin/ui/ui-sign-up/ui-sign-up.component.html
+++ b/libs/e-commerce-lib/src/lib/admin/ui/ui-sign-up/ui-sign-up.component.html
@@ -2,10 +2,10 @@
   class="flex flex-col justify-around h-full px-4 xl:p-8 xl:bg-e-com-secondary-variant xl:rounded-md xl:justify-between xl:bg-opacity-20"
 >
   <div class="flex flex-col gap-1">
-    <span class="text-2xl"> Log in </span>
-    <span> Continue to your store </span>
+    <span class="text-2xl"> Welcome </span>
+    <span> Sign up to access your store </span>
   </div>
-  <form [formGroup]="signInForm" class="flex flex-col gap-2 xl:gap-8">
+  <form [formGroup]="signUpForm" class="flex flex-col gap-2 xl:gap-8">
     <div class="flex flex-col gap-2">
       <label for="email">Email</label>
       <input
@@ -13,8 +13,8 @@
         type="email"
         name="email"
         id="email"
+        formControlName="emailSignUp"
         placeholder="Enter store email"
-        formControlName="emailSignIn"
         autofocus
       />
     </div>
@@ -25,29 +25,30 @@
         type="password"
         name="password"
         id="pass"
-        formControlName="passwordSignIn"
         placeholder="******"
+        formControlName="passwordSignUp"
+        (keyup.enter)="signUp()"
       />
     </div>
   </form>
 
   <div class="flex xl:justify-start">
     <button
-      [disabled]="signInForm.invalid"
-      (click)="signIn()"
+      [disabled]="signUpForm.invalid"
+      (click)="signUp()"
       class="border border-light w-full xl:w-1/3 py-2 px-6 rounded-full hover:bg-e-com-accent transition-colors duration-500 disabled:text-gray-500 disabled:border-gray-500 hover:disabled:bg-transparent"
     >
-      Continue
+      Register
     </button>
   </div>
   <div class="text-sm flex gap-2 justify-center xl:justify-start">
-    <p>Don't have an account yet?</p>
+    <p>Already have an account?</p>
     <p>
       <button
-        (click)="switchToSignUp()"
+        routerLink="../"
         class="underline underline-offset-2 text-e-com-accent"
       >
-        Sign up
+        Sign in
       </button>
     </p>
   </div>
